--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,58 @@
 /* basic css reset will go here */
-
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+body,
+html {
+  height: 100%;
+  scroll-behavior: smooth;
+  padding: 0;
+  margin: 0;
+}
+img {
+  width: 100%;
+  height: 159px;
+  border-radius: 10px;
+}
 /* choose a mobile first approach */
 /* MOBILE */
+h1 {
+  text-align: center;
+}
+h2 {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.product-grid {
+  padding: 36px 24px;
+}
+.section-header a {
+  display: none;
+}
+.section-body {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 24px 0;
+}
+.product-card {
+  display: inline-block;
+  background-color: #fff;
+  border-radius: 10px;
+  width: 50%;
+  position: relative;
+}
+.product-card.right-gap {
+  padding-right: 12px;
+}
+.product-card .reviews span {
+  font-size: 11px;
+}
+.product-card .reviews .review-count {
+  color: #707070;
+  font-size: 11px;
+}
 /* wider devices than mobile */
 @media (min-width: 600px) {
   /* TABLET / DESKTOP */
