--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,35 @@ h2 {
   color: #707070;
   font-size: 11px;
 }
+/* BADGE */
+.badge {
+  position: absolute;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 8px;
+  border: solid 1px black;
+  text-align: center;
+  /* Get this from figma */
+  font-family: "Bebas Neue";
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.32px;
+}
+
+.badge.primary {
+  background-color: white;
+  color: black;
+  top: 4px;
+  left: 4px;
+}
+
+.badge.secondary {
+  background-color: #5c7962;
+  color: white;
+  top: 4px;
+  right: 4px;
+}
 /* wider devices than mobile */
 @media (min-width: 600px) {
   /* TABLET / DESKTOP */
