Did some tweaks for typography, tested with 2 extra products.

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ h1 {
 }
 h2 {
   font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.48px;
   text-transform: uppercase;
 }
 .product-grid {
@@ -62,7 +66,6 @@ h2 {
   border: solid 1px black;
   text-align: center;
   /* Get this from figma */
-  font-family: "Bebas Neue";
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -81,6 +84,13 @@ h2 {
   color: white;
   top: 4px;
   right: 4px;
+}
+.product-card .price {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
 }
 /* wider devices than mobile */
 @media (min-width: 600px) {
