--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,29 @@ h2 {
   line-height: normal;
   text-transform: uppercase;
 }
+/* swap image on hover */
+.image-container {
+  position: relative;
+}
+.image-container img {
+  display: block;
+  width: 100%;
+}
+.secondary-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+.image-container:hover .primary-image {
+  opacity: 0;
+}
+.image-container:hover .secondary-image {
+  opacity: 1;
+}
+
 /* wider devices than mobile */
 @media (min-width: 600px) {
   /* TABLET / DESKTOP */
